--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.mandar.fbpoll"
+      package="com.poll.fbpoll"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".FBPollBeeActivity"
+        <activity android:name="com.poll.fbpoll.FBPollBeeActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        
+        <activity
+            android:name="com.poll.dashboard.DashboardActivity"
+            android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
+        
     <uses-permission android:name="android.permission.INTERNET"/>
     </application>
 </manifest>
